fixed styling in heading and overflow issues

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
 }
 .container {
-    width: 100vw;
+    width: auto;
     display: grid;
     /* 2x2 grid */
     grid-template-columns: 1fr 4fr;
@@ -21,8 +22,17 @@ body {
     display: grid;
     grid-template-rows: auto auto 1fr;
 }
-.logo {
+.dashboard .logo,
+.dashboard .menu,
+.dashboard .settings-menu {
+    margin: 0;
     padding: 0;
+}
+.logo {
+    display: flex;
+}
+.logo h1 {
+    margin: 0;
 }
 .menu {
     padding: 0;
@@ -62,8 +72,30 @@ body {
     align-self: center;
 }
 .heading-profile {
-    justify-self: center;
-    align-self: center;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    align-items: center;
+    gap: 5px;
+}
+.heading-greet {
+    display: grid;
+    grid-template: repeat(2, auto) / repeat(2, auto);
+}
+.heading-greet img {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+}
+.heading-greet img,
+.heading-greet h6,
+.heading-greet h2 {
+    padding: 0;
+    margin: 0;
+}
+.heading-btns {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    align-items: center;
+    gap: 10px;
 }
 
 /* === BODY === */
